fix: adjust ShopHeader menu marker position by 1px to align with stripe

--- a/src/components/widgets/ShopHeader/ShopHeader.module.scss
+++ b/src/components/widgets/ShopHeader/ShopHeader.module.scss
@@ -49,7 +49,7 @@
   li a::after {
     content: '';
     position: absolute;
-    top: 45px;
+    top: 46px;
     left: 0;
     width: 100%;
     height: 3px;
